add command to reset status
